fix footer overflow in mobile

--- a/src/styles/MasterPage.module.less
+++ b/src/styles/MasterPage.module.less
@@ -7,10 +7,8 @@
 }
 
 .FooterLogo {
-  display: flex;
-  align-items: left;
   padding: 1.25rem;
-  width: 48rem;
+  max-width: 60%;
 }
 
 .MasterContent {
@@ -22,7 +20,8 @@
 
 .MasterFooter {
   background-color: #DBDBDB;
-  text-align: center;
+  display: flex;
+  align-items: flex-start;
 }
 
 .MasterFooterText {
